2009-02-18  Frank Ch. Eigler  <fche@elastic.org>

	PR9719.
	* elaborate.cxx (typeresolution_info::mismatch): Initialize
	some locals so optimized code works too.

2009-02-18  Rajan Arora  <rarora@redhat.com>

	* testuite/semko/typemismatch.stp: New test.
	
2009-02-18  Rajan Arora  <rarora@redhat.com>

	* elaborate.cxx (typeresolution_info::mismatch): Generate semantic
	error for the token where type was resolved and add to chain
	* elaborate.h (struct typeresolution_info: public visitor): New
	members 'resolved_toks' and 'printed_toks'

2009-02-18  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwarf_builder::build): If not found in .probes, use .label
	* includes/sys/sdt.h (STAP_PROBE): Always create .probes section.
	* dtrace: Use basename of -s if no -o given.

2009-02-18  Josh Stone  <jistone@redhat.com>

	* loc2c.c (c_translate_argument): Create a dummy location to start
	the address computation from a function parameter.
	* translate.cxx (base_query, dwarf_query): Move some members from
	base_query to dwarf_query, so the former can be more generic.  Also
	add a constructor using a module string instead of probe parameters.
	(dwflpp::query_modules, dwflpp::iterate_over_modules): Use a generic
	base_query instead of a dwarf_query.
	(dwarf_cast_query): New query to scan the modules and CUs for a
	matching type definition, and then produce a code fragment to deref
	each component.
	(dwarf_cast_expanding_visitor): Tries to replace @casts with a function
	call to the result of a dwarf_cast_query.
	(dwflpp::declaration_resolve): Search by name instead of by die.
	(dwflpp::translate_components): Use the incoming vardie as the first
	type die, so we don't assume that attr_mem has a DW_AT_type already.
	(dwflpp::literal_stmt_for_pointer): Construct a C fragment that starts
	with a pointer argument (THIS->pointer) and dereferences each member
	component from there.
	(*_derived_probe::register_patterns): Take a session parameter instead