@@ -1,3 +1,8 @@
+2009-02-19  Mark Wielaard  <mjw@redhat.com>
+
+	* translate.cxx (dump_unwindsyms): Ignore symbols before module
+	base address.
+
 2009-02-18  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR9719.
